--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="about-section">
                     <h2 class="about-title">Sobre mim</h2>
                     <div class="about-text" contenteditable="true" data-placeholder="Escreva aqui sua apresentação...">
-                        Escreva aqui sua apresentação...
+                        EM DESENVOLVIMENTO
                     </div>
                 </div>
 
@@ -179,3 +179,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
