--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juliane Conceicao - Desenvolvedora em formação</title>
+    <title>Juliane Conceicao - DEV JR</title>
     <meta name="description" content="Portfólio de Juliane Conceicao.">
     <meta property="og:title" content="Juliane Conceicao DEV">
     <meta property="og:description" content="Portfólio profissional">
@@ -179,4 +179,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
